--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8" lang="en" />
 	<title> Margaret Dorsey </title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-<p> Hello, world! </p>
+	<p> Hello, world! A portfolio website will go here when it's made. </p>
 </body>
 </html>
 
