--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</ul>
 			</li>
 			<li><a href="blog/index.html">Blog</a></li>
-			<li><a href="#">Resume</a></li>
+			<li><a href="Resume.pdf">Resume</a></li>
 		</ul>
 		
 		
