added some more css, added fonts, filler html in index

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-	<header> 
-		<a id="logo" href="index.html"> <img src="media/#" alt="my logo" /> </a>
+<header> 
+		<div id="logo"> <img src="#" alt="my logo"/> <span>Margaret E. Dorsey</span></div>
 		<a id="japanese" href="japanese/index.html">日本語 </a>
-	</header>
+	
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
@@ -51,6 +51,15 @@
 		
 		
 	</nav>
+</header>
+<main>
+</main>
+
+<footer>
+<h1> Welcome to my portfolio website!</h1>
+<p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
+I am also following the Computer Science curriculum above and beyond my minor requirements, and minoring in the Japanese language. This is filler blah blah blah.
+</footer>
 </body>
 </html>
 
