trying out pushing from usb drive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 <footer>
 <h1> Welcome to my portfolio website!</h1>
 <p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
-I am also following the Computer Science curriculum above and beyond my minor requirements, and minoring in the Japanese language. This is filler blah blah blah.
+I am also following the Computer Science curriculum above and beyond my minor requirements, and minoring in the Japanese language. Please feel free to look around
+and get to know me.
+
+<h2> Contact Me </h2>
+<a href="https://github.com/Abhalphiest"> <img src="#" alt="github" /> </a>
+<a href="#"> <img src="#" alt="linkedin" title="My LinkedIn Profile" /> </a>
 </footer>
 </body>
 </html>
