--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8" lang="en" />
+	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey </title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/indexstyle.css" />
 </head>
 <body>
 <header> 
-		<div id="logo"> <img src="#" alt="my logo"/> <span>Margaret E. Dorsey</span></div>
-		<a id="japanese" href="japanese/index.html">日本語 </a>
+		<div id="logo"> <span>Margaret E. Dorsey</span></div>
+		<a id="japanese" href="japanese/index.html" lang="jp" hreflang="jp">日本語 </a>
 	
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
-			<li><a href="#logo" id="current"> Front Page </a></li>
+			<li><a href="#graphic" id="current"> Front Page </a></li>
 			<li>
 				<a href="math/index.html">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
@@ -43,27 +44,23 @@
 			</li>
 			<li><a href="blog/index.html">Blog</a></li>
 			<li><a href="Resume.pdf">Resume</a></li>
-		</ul>
-		
-		
-		
-		
-		
-		
+		</ul>		
 	</nav>
 </header>
-<main>
-</main>
+<div id="graphic">
+	<img src="media/index/indexgraphic.svg" alt="vector graphic for decoration" />
+	
+</div>
 
 <footer>
 <h1> Welcome to my portfolio website!</h1>
 <p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
-I am also following the Computer Science curriculum above and beyond my minor requirements, and minoring in the Japanese language. Please feel free to look around
+I am also following the Computer Science curriculum above and beyond my minor requirements, and completing a second minor in the Japanese language. Please feel free to look around
 and get to know me.
-
-<h2> Contact Me </h2>
-<a href="https://github.com/Abhalphiest"> <img src="#" alt="github" /> </a>
-<a href="#"> <img src="#" alt="linkedin" title="My LinkedIn Profile" /> </a>
+<p>
+	<a href="https://github.com/Abhalphiest"> <img src="media/index/github.png" title="My GitHub Account" alt="github" width="50" height="50" /> </a>
+	<a href="https://www.linkedin.com/in/margaretdorsey"> <img src="media/index/linkedin.png" alt="linkedin" title="My LinkedIn Profile" width="50" height="50"/> </a>
+</p>
 </footer>
 </body>
 </html>
