added html framework to all pages, started japanese index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header> 
-		<div id="logo"> <span>Margaret E. Dorsey</span></div>
-		<a id="japanese" href="japanese/index.html" lang="jp" hreflang="jp">日本語 </a>
+	<div id="logo"> <span>Margaret E. Dorsey</span></div>
+	<a id="japanese" href="japanese/index.html" lang="ja" hreflang="ja">日本語 </a>
 	
 	<nav> 
 		<!-- main navigation (always visible) -->
@@ -38,8 +38,8 @@
 					<!-- sub navigation for game design (invisible until hover) -->
 					<ul class="dropdown">
 						<li><a href="gamedesign/design.html"> Design</a> </li>
-						<li><a href="computing/artworkandassets.html"> Artwork and Assets </a> </li>
-						<li><a href="computing/games.html"> Games </a> </li>
+						<li><a href="gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
+						<li><a href="gamedesign/games.html"> Games </a> </li>
 					</ul>
 			</li>
 			<li><a href="blog/index.html">Blog</a></li>
