cleared out browser defaults, fixed navigation a little

--- a/japanese/index.html
+++ b/japanese/index.html
@@ -4,12 +4,14 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> マーガレット・ドーシーのポートフォリオのウェブサイト </title>
-	<link rel="stylesheet" type="text/css" href="css/stylesjp.css" /> <!-- needs to be last -->
+	<link rel="stylesheet" type="text/css" href="css/stylesjp.css" /> <!-- needs to be first so we get all the fonts -->
+	<link rel="stylesheet" type ="text/css" href="css/indexjp.css" />
+	
 </head>
 <body>
 <header> 
 	<div id="logo"> <span lang="en">Margaret E. Dorsey</span></div>
-	<a id="japanese" href="../index.html" lang="ja" hreflang="en">English</a>
+	<a id="english" href="../index.html" lang="ja" hreflang="en">English</a>
 	
 	<nav> 
 		<!-- main navigation (always visible) -->
