added some styles, added contact page, fixed a spelling error or 4

--- a/japanese/index.html
+++ b/japanese/index.html
@@ -26,7 +26,7 @@
 				</ul>
 			</li>
 			<li>
-				<a href="computing/index.html">コンピュター科学</a>
+				<a href="computing/index.html">コンピュータ科学</a>
 				<!-- sub navigation for computing (invisible until hover) -->
 				<ul class="dropdown">
 					<li><a href="computing/education.html"> 教育 </a> </li>
@@ -44,6 +44,7 @@
 					</ul>
 			</li>
 			<li><a href="../blog/index.html">ブログ　（英語で）</a></li>
+			<li><a href="contact.html"> 連絡 </a> </li>
 			<li><a href="Resume.pdf">履歴書</a></li>
 		</ul>		
 	</nav>
@@ -56,7 +57,7 @@
 <footer>
 <h1>私のポートフォリオのウェブサイトへようこそ！</h1>
 <p> 私、マーガレット●ドーシーと申します、 Rochester Institute of Technology (ロチェスターの工業大学）の二年生で、専攻が２つあります。ゲームデザインと計算数学です.
-コンピュター科学の授業もたくさん受けていて, 二つの副専攻は日本語とコンピュター科学です。どうぞ見回して、知り合ってください。　もし私の日本語が下手だったらすみません。努めて勉強しているのに、まだ習っているのです。
+コンピュータ科学の授業もたくさん受けていて, 二つの副専攻は日本語とコンピュター科学です。どうぞ見回して、知り合ってください。　もし私の日本語が下手だったらすみません。努めて勉強しているのに、まだ習っているのです。
 <p>
 	<a href="https://github.com/Abhalphiest"> <img src="../media/index/github.png" title="Githubのアカウント" alt="github" width="50" height="50" /> </a>
 	<a href="https://www.linkedin.com/in/margaretdorsey"> <img src="../media/index/linkedin.png" alt="linkedin" title="LinkedInのアカウント" width="50" height="50"/> </a>
