--- a/gamedesign/games.html
+++ b/gamedesign/games.html
@@ -43,6 +43,7 @@
 					</ul>
 			</li>
 			<li><a href="../blog/index.html" >Blog</a></li>
+			<li><a href="../contact.html" > Contact </a> </li>
 			<li><a href="../Resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
