--- a/math/education.html
+++ b/math/education.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/education.css" />
 	
 </head>
 <body>
@@ -43,6 +44,7 @@
 					</ul>
 			</li>
 			<li><a href="../blog/index.html" >Blog</a></li>
+			<li><a href="../contact.html"> Contact </a> </li>
 			<li><a href="../Resume.pdf">Resume</a></li>
 		</ul>		
 	</nav>
@@ -50,18 +52,21 @@
 
 <article id="main"> <!-- for the entire body of content -->
 	<section>
-		<h2>Field of Mathematics </h2>
+		<h2>Linear Algebra</h2>
 		<h4>Courses Taken </h4>
 			<ul>
-				<li> </li>
+				<li> Elementary Linear Algebra</li>
+				<li> Advanced Linear Algebra </li>
 			</ul>
 		<h4> Topics Covered </h4>
 			<ul>
-				<li> </li>
+				<li>Elementary Matrix Operations</li>
+				<li> Abstract Vector Spaces </li>
+				<li> Filler filler filler </li>
 			</ul>
 		<h4> Selected Resources </h4>
 			<ul>
-				<li> </li>
+				<li>Filler Filler Filler </li>
 			<ul>
 	</section>
 	
