more content and css and stuff

--- a/computing/education.html
+++ b/computing/education.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Computing Education</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/education.css" />
 	
 </head>
 <body>
@@ -51,10 +52,11 @@
 
 <article id="main"> <!-- for the entire body of content -->
 	<section>
-		<h2>Field of Computing </h2>
+		<h2>Basic Data Structures and Algorithms</h2>
 		<h4>Courses Taken </h4>
 			<ul>
-				<li> </li>
+				<li> Game Design and Algorithmic Problem Solving I</li>
+				<li> Game Design and Algorithmic Problem Solving II</li>
 			</ul>
 		<h4> Topics Covered </h4>
 			<ul>
@@ -67,14 +69,54 @@
 	</section>
 	
 	<section>
-		<h2>Field of Computing </h2>
+		<h2>Systems and Low Level Programming</h2>
 		<h4>Courses Taken </h4>
 			<ul>
-				<li> </li>
+				<li>Mechanics of Programming </li>
 			</ul>
 		<h4> Topics Covered </h4>
 			<ul>
+				<li> The C language </li>
+				<li> Memory Layout </li>
+				<li> The compilation and linking process </li>
+				<li> System Calls and basic Operating Systems </li>
+				<li> The Bash shell and the Unix environment </li>
+			</ul>
+		<h4> Selected Resources </h4>
+			<ul>
 				<li> </li>
+			<ul>
+	</section>
+	
+	<section>
+		<h2>Graphics Programming</h2>
+		<h4> Topics Covered </h4>
+			<ul>
+				<li> OpenGL and C++ </li>
+				<li> Transformation Matrices </li>
+				<li> Cameras, Orthogonal and Perspective </li>
+				<li> Mesh Construction </li>
+				<li> Shaders </li>
+			</ul>
+		<h4> Selected Resources </h4>
+			<ul>
+				<li> </li>
+			<ul>
+	</section>
+	
+	<section>
+		<h2>Physics Programming and Simulations</h2>
+		<h4>Courses Taken </h4>
+			<ul>
+				<li>Interactive Media Development</li>
+			</ul>
+		<h4> Topics Covered </h4>
+			<ul>
+				<li> Basic autonomous algorithms - flee, seek, evade, pursue, obstacle avoidance, etc. </li>
+				<li> Basic kinematics - numerical integration of velocity and position from applied forces. </li>
+				<li> Collision Detection - AABB, bounding spheres, reoriented bounding boxes, separation-axis test </li>
+				<li> Flocking Algorithms </li>
+				<li> Spatial Partitioning </li>
 			</ul>
 		<h4> Selected Resources </h4>
 			<ul>
