--- a/computing/index.html
+++ b/computing/index.html
@@ -49,5 +49,17 @@
 	</nav>
 </header>
 
+<article id="gallery">
+<section>
+<a href="education.html"> Education </a>
+</section>
+<section>
+<a href="currentprojects.html"> Current Projects </a>
+</section>
+<section>
+<a href="completedprojects.html"> Completed Projects </a>
+</section>
+</article>
+
 </body>
 </html>
