--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey </title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-	<link rel="stylesheet" type="text/css" href="css/indexstyle.css" />
 </head>
 <body>
 <header> 
@@ -15,7 +14,7 @@
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
-			<li><a href="#graphic" id="current"> Front Page </a></li>
+			<li><a href="index.html"> Front Page </a></li>
 			<li>
 				<a href="math/index.html">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
@@ -49,22 +48,14 @@
 	</nav>
 </header>
 
-<div id="graphic">
-	<img src="media/index/indexgraphic.svg" alt="vector graphic for decoration" />
-	
-</div>
-
-<footer>
-<h1> Welcome to my portfolio website!</h1>
-<p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
-I am also following the Computer Science curriculum above and beyond my minor requirements, and completing a second minor in the Japanese language. Please feel free to look around
-and get to know me.
+<article>
+<h1> Notes</h1>
+<p> All images were made by me, all CSS, scripts, etc are mine.
+Fonts are Caviar Dreams and Casual Nobility.
 <p>
-	<a href="https://github.com/Abhalphiest"> <img src="media/index/github.png" title="My GitHub Account" alt="github" width="50" height="50" /> </a>
-	<a href="https://www.linkedin.com/in/margaretdorsey"> <img src="media/index/linkedin.png" alt="linkedin" title="My LinkedIn Profile" width="50" height="50"/> </a>
-</p>
-<a href="notes.html"> Link to the notes page </a>
-</footer>
+</article>
+
+
 </body>
 </html>
 
