--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -49,5 +49,15 @@
 	</nav>
 </header>
 
+<article>
+<section class="project">
+	<h1> </h1>
+	<img src="" alt="header background" />
+	<p class="description">
+	</p>
+	<a href="" class="github">Project Repository on GitHub</a>
+</section>
+</article>
+
 </body>
 </html>
