added some content, fixed some things, added the contact graphic

--- a/computing/completedprojects.html
+++ b/computing/completedprojects.html
@@ -51,9 +51,9 @@
 
 <article>
 <section class="project">
-	<h1> </h1>
+	<h1>Jarvis March and Quickhull </h1>
 	<img src="" alt="header background" />
-	<p class="description">
+	<p class="description"> Implementation of the Jarvis March and Quickhull algorithms, for CSCI 243 Mechanics of Programming.
 	</p>
 	<a href="" class="github">Project Repository on GitHub</a>
 </section>
