--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -51,11 +51,11 @@
 
 <article>
 <section class="project">
-	<h1> </h1>
+	<h1>Engine </h1>
 	<img src="" alt="header background" />
-	<p class="description">
+	<p class="description"> A rendering and physics engine with a from scratch math library, implemented in C/C++ using openGL, GLEW, and GLFW.
 	</p>
-	<a href="" class="github">Project Repository on GitHub</a>
+	<a href="https://github.com/Abhalphiest/engine" class="github">Project Repository on GitHub</a>
 </section>
 </article>
 
