--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -49,5 +49,22 @@
 	</nav>
 </header>
 
+
+
+<article id="gallery">
+<section id="introduction"> </section>
+<section>
+	<span> 3d Model Gallery</span>
+</section>
+
+<section>
+	<span> Brush and Ink Artwork</span>
+</section>
+
+<section>
+	<span> Digital Art</span>
+</section>
+
+</article>
 </body>
 </html>
