--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -48,6 +48,12 @@
 		</ul>		
 	</nav>
 </header>
+<article id="gallery">
+<section id="introduction"> </section>
+<section>
+	<span> Architecture Sim User Interface</span>
+</section>
 
+</article>
 </body>
 </html>
