--- a/gamedesign/games.html
+++ b/gamedesign/games.html
@@ -48,6 +48,16 @@
 		</ul>		
 	</nav>
 </header>
+<article id="gallery">
+<section id="sidebar">
 
+</section>
+<aside> </aside>
+<section id="introduction"> </section>
+<section>
+	<span> Apotheoun</span>
+</section>
+
+</article>
 </body>
 </html>
