--- a/notes.html
+++ b/notes.html
@@ -51,7 +51,7 @@
 <article>
 <h1> Notes</h1>
 <p> All images were made by me, all CSS, scripts, etc are mine.
-Fonts are Caviar Dreams and Casual Nobility.
+Fonts are Across the Road, Caviar Dreams and Casual Nobility.
 <p>
 </article>
 
