--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey </title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-	<link rel="stylesheet" type="text/css" href="css/indexstyle.css" />
 </head>
 <body>
 <header> 
@@ -15,7 +14,7 @@
 	<nav> 
 		<!-- main navigation (always visible) -->
 		<ul>
-			<li><a href="#graphic"> Front Page </a></li>
+			<li><a href="index.html"> Front Page </a></li>
 			<li>
 				<a href="math/index.html">Mathematics</a>
 				<!-- sub navigation for math (invisible until hover)-->
@@ -49,24 +48,23 @@
 	</nav>
 </header>
 
-<div id="graphic">
-	<img src="media/contact.svg" alt="vector graphic for decoration" />
-	
-</div>
 
 <article>
+
 <h1>Contact Information</h1>
+<img src="media/contact.svg" alt="vector graphic for decoration" id="contactgraphic"/>
 	<table>
 		<tr><td class="label"> rit.edu Email Address: </td> <td> med7068 </td> </tr>
 		<tr><td class="label"> Gmail Address </td> <td> margaretdorsey94 </td> </tr>
 	</table>
-	<p> I am located on campus at the Rochester Institute of Technology in Rochester, NY year-round (except of course, during internships or study abroad). For my phone number,
+	<p> I am located on campus at the Rochester Institute of Technology in Rochester, NY year-round (except, of course, during internships or study abroad). For my phone number,
 	please contact me or see my <a href="resume.pdf"> resume </a>. If you simply just want to hear more from me, feel free to check out my various social media accounts, listed below.
 	</p>
 <h3> Social Media </h3>
 	<a href="https://github.com/Abhalphiest"> <img src="media/index/github.png" title="My GitHub Account" alt="github" width="50" height="50" /> </a>
 	<a href="https://www.linkedin.com/in/margaretdorsey"> <img src="media/index/linkedin.png" alt="linkedin" title="My LinkedIn Profile" width="50" height="50"/> </a>
 	
+
 </p>
 </article>
 
