added some content

--- a/computing/completedprojects.html
+++ b/computing/completedprojects.html
@@ -50,8 +50,9 @@
 </header>
 
 <article>
+<h1> Completed Projects </h1>
 <section class="project">
-	<h1>Jarvis March and Quickhull </h1>
+	<h2>Jarvis March and Quickhull </h2>
 	<img src="" alt="header background" />
 	<p class="description"> Implementation of the Jarvis March and Quickhull algorithms, for CSCI 243 Mechanics of Programming.
 	</p>
