--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -50,8 +50,9 @@
 </header>
 
 <article>
+<h1> Current Projects </h1>
 <section class="project">
-	<h1>Engine </h1>
+	<h2>Engine </h2>
 	<img src="" alt="header background" />
 	<p class="description"> A rendering and physics engine with a from scratch math library, implemented in C/C++ using openGL, GLEW, and GLFW.
 	</p>
