--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -52,7 +52,9 @@
 
 
 <article id="gallery">
-<section id="introduction"> </section>
+<section id="introduction">
+<h1> Artwork and Assets </h1>
+</section>
 <section>
 	<span> 3d Model Gallery</span>
 </section>
