--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -49,7 +49,9 @@
 	</nav>
 </header>
 <article id="gallery">
-<section id="introduction"> </section>
+<section id="introduction">
+<h1> Design </h1>
+ </section>
 <section>
 	<span> Architecture Sim User Interface</span>
 </section>
