--- a/gamedesign/games.html
+++ b/gamedesign/games.html
@@ -50,14 +50,21 @@
 </header>
 <article id="gallery">
 <section id="sidebar">
-
+<ul>
+<li> <a href="#apotheoun"> Apotheoun </a></li>
+<li> <a href="#amusementpark"> AmusementPark </a></li>
+</ul>
 </section>
 <aside> </aside>
-<section id="introduction"> </section>
-<section>
+<section id="introduction"> 
+<h1> Games </h1>
+</section>
+<section id="apotheoun">
 	<span> Apotheoun</span>
 </section>
-
+<section id="amusementpark">
+	<span> Amusement Park</span>
+</section>
 </article>
 </body>
 </html>
