--- a/gamedesign/index.html
+++ b/gamedesign/index.html
@@ -49,5 +49,18 @@
 	</nav>
 </header>
 
+<article id="gallery">
+<section>
+<a href="design.html"> Design </a>
+</section>
+<section>
+<a href="artworkandassets.html"> Art and Assets </a>
+</section>
+<section>
+<a href="games.html"> Games </a>
+</section>
+</article>
+
+
 </body>
 </html>
