--- a/math/index.html
+++ b/math/index.html
@@ -49,5 +49,14 @@
 	</nav>
 </header>
 
+<article id="gallery">
+<section>
+<a href="education.html"> Education </a>
+</section>
+<section>
+<a href="research.html"> Research </a>
+</section>
+</article>
+
 </body>
 </html>
