--- a/math/research.html
+++ b/math/research.html
@@ -48,6 +48,12 @@
 		</ul>		
 	</nav>
 </header>
-
+<article>
+<section>
+<h1> Lie Symmetries and Differential Equations </h1>
+<img src="" alt="symmetry header graphic" />
+<p> </p>
+<section>
+</article>
 </body>
 </html>
