added some graphics, styled a lot of pages, still a ton to do

--- a/computing/education.html
+++ b/computing/education.html
@@ -51,6 +51,7 @@
 </header>
 
 <article id="main"> <!-- for the entire body of content -->
+ <h1 id="computingtitle"> Education </h1>
 	<section>
 		<h2>Basic Data Structures and Algorithms</h2>
 		<h4>Courses Taken </h4>
@@ -58,7 +59,7 @@
 				<li> Game Design and Algorithmic Problem Solving I</li>
 				<li> Game Design and Algorithmic Problem Solving II</li>
 			</ul>
-		<h4> Topics Covered </h4>
+		<h4> Knowledge </h4>
 			<ul>
 				<li> </li>
 			</ul>
@@ -74,7 +75,7 @@
 			<ul>
 				<li>Mechanics of Programming </li>
 			</ul>
-		<h4> Topics Covered </h4>
+		<h4>Knowledge </h4>
 			<ul>
 				<li> The C language </li>
 				<li> Memory Layout </li>
@@ -90,7 +91,7 @@
 	
 	<section>
 		<h2>Graphics Programming</h2>
-		<h4> Topics Covered </h4>
+		<h4> Knowledge </h4>
 			<ul>
 				<li> OpenGL and C++ </li>
 				<li> Transformation Matrices </li>
@@ -110,7 +111,7 @@
 			<ul>
 				<li>Interactive Media Development</li>
 			</ul>
-		<h4> Topics Covered </h4>
+		<h4> Knowledge </h4>
 			<ul>
 				<li> Basic autonomous algorithms - flee, seek, evade, pursue, obstacle avoidance, etc. </li>
 				<li> Basic kinematics - numerical integration of velocity and position from applied forces. </li>
