--- a/math/education.html
+++ b/math/education.html
@@ -51,6 +51,7 @@
 </header>
 
 <article id="main"> <!-- for the entire body of content -->
+<h1 id="mathtitle"> Education </h1>
 	<section>
 		<h2>Linear Algebra</h2>
 		<h4>Courses Taken </h4>
@@ -58,7 +59,7 @@
 				<li> Elementary Linear Algebra</li>
 				<li> Advanced Linear Algebra </li>
 			</ul>
-		<h4> Topics Covered </h4>
+		<h4> Knowledge </h4>
 			<ul>
 				<li>Elementary Matrix Operations</li>
 				<li> Abstract Vector Spaces </li>
@@ -71,12 +72,12 @@
 	</section>
 	
 	<section>
-		<h2>Field of Mathematics </h2>
+		<h2>Differential Equations </h2>
 		<h4>Courses Taken </h4>
 			<ul>
-				<li> </li>
+				<li>Ordinary Differential Equations</li>
 			</ul>
-		<h4> Topics Covered </h4>
+		<h4> Knowledge </h4>
 			<ul>
 				<li> </li>
 			</ul>
