--- a/math/research.html
+++ b/math/research.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/project.css" />
 	
 </head>
 <body>
@@ -49,9 +50,9 @@
 	</nav>
 </header>
 <article>
-<section>
-<h1> Lie Symmetries and Differential Equations </h1>
-<img src="" alt="symmetry header graphic" />
+<h1 id="mathtitle"> Research </h1>
+<section class="project">
+<h2> Lie Symmetries and Differential Equations </h2>
 <p> </p>
 <section>
 </article>
