--- a/computing/completedprojects.html
+++ b/computing/completedprojects.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Completed Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/project.css" />
 	
 </head>
 <body>
@@ -50,13 +51,12 @@
 </header>
 
 <article>
-<h1> Completed Projects </h1>
+<h1 id="computingtitle"> Completed Projects </h1>
 <section class="project">
 	<h2>Jarvis March and Quickhull </h2>
-	<img src="" alt="header background" />
 	<p class="description"> Implementation of the Jarvis March and Quickhull algorithms, for CSCI 243 Mechanics of Programming.
 	</p>
-	<a href="" class="github">Project Repository on GitHub</a>
+	<a href="https://github.com/Abhalphiest/hullAlgorithms" class="github">Project Repository on GitHub</a>
 </section>
 </article>
 
