--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" src="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" src="../css/project.css" />
 	
 </head>
 <body>
@@ -50,10 +51,9 @@
 </header>
 
 <article>
-<h1> Current Projects </h1>
+<h1 id="computingtitle"> Current Projects </h1>
 <section class="project">
 	<h2>Engine </h2>
-	<img src="" alt="header background" />
 	<p class="description"> A rendering and physics engine with a from scratch math library, implemented in C/C++ using openGL, GLEW, and GLFW.
 	</p>
 	<a href="https://github.com/Abhalphiest/engine" class="github">Project Repository on GitHub</a>
