computing pages deemed good enough for now

--- a/computing/education.html
+++ b/computing/education.html
@@ -61,12 +61,16 @@
 			</ul>
 		<h4> Knowledge </h4>
 			<ul>
-				<li> </li>
+				<li>Arrays, Lists, Trees, Linked Lists, Graphs, etc</li>
+				<li> Conditionals and Loops </li>
+				<li> Hash Tables and Dictionaries </li>
+				<li> Threading </li>
+				<li> The C# language and Visual Studio </li>
+				<li> Encapsulation, inheritance, polymorphism </li>
+				<li> Event handling</li>
+				<li> Basic networking (Sockets) </li>
+				<li> Exception catching </li>
 			</ul>
-		<h4> Selected Resources </h4>
-			<ul>
-				<li> </li>
-			<ul>
 	</section>
 	
 	<section>
@@ -83,10 +87,6 @@
 				<li> System Calls and basic Operating Systems </li>
 				<li> The Bash shell and the Unix environment </li>
 			</ul>
-		<h4> Selected Resources </h4>
-			<ul>
-				<li> </li>
-			<ul>
 	</section>
 	
 	<section>
@@ -99,10 +99,6 @@
 				<li> Mesh Construction </li>
 				<li> Shaders </li>
 			</ul>
-		<h4> Selected Resources </h4>
-			<ul>
-				<li> </li>
-			<ul>
 	</section>
 	
 	<section>
@@ -119,10 +115,6 @@
 				<li> Flocking Algorithms </li>
 				<li> Spatial Partitioning </li>
 			</ul>
-		<h4> Selected Resources </h4>
-			<ul>
-				<li> </li>
-			<ul>
 	</section>
 </article>
 
