--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
-	<link rel="stylesheet" type="text/css" src="../css/styles.css" />
-	<link rel="stylesheet" type="text/css" src="../css/project.css" />
+	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/project.css" />
 	
 </head>
 <body>
