--- a/computing/index.html
+++ b/computing/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Computing</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/indexstyle.css" />
 	
 </head>
 <body>
@@ -49,16 +50,14 @@
 	</nav>
 </header>
 
-<article id="gallery">
-<section>
+<article id="subindex">
+
 <a href="education.html"> Education </a>
-</section>
-<section>
+
 <a href="currentprojects.html"> Current Projects </a>
-</section>
-<section>
+
 <a href="completedprojects.html"> Completed Projects </a>
-</section>
+
 </article>
 
 </body>
