--- a/gamedesign/index.html
+++ b/gamedesign/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/indexstyle.css" />
 	
 </head>
 <body>
@@ -49,16 +50,14 @@
 	</nav>
 </header>
 
-<article id="gallery">
-<section>
+<article id="subindex">
+
 <a href="design.html"> Design </a>
-</section>
-<section>
+
 <a href="artworkandassets.html"> Art and Assets </a>
-</section>
-<section>
+
 <a href="games.html"> Games </a>
-</section>
+
 </article>
 
 
