--- a/math/education.html
+++ b/math/education.html
@@ -65,10 +65,6 @@
 				<li> Abstract Vector Spaces </li>
 				<li> Filler filler filler </li>
 			</ul>
-		<h4> Selected Resources </h4>
-			<ul>
-				<li>Filler Filler Filler </li>
-			<ul>
 	</section>
 	
 	<section>
@@ -81,10 +77,33 @@
 			<ul>
 				<li> </li>
 			</ul>
-		<h4> Selected Resources </h4>
+	</section>
+	
+	<section>
+		<h2>Pure Mathematics </h2>
+		<h4>Courses Taken </h4>
+			<ul>
+				<li>Discrete Math and Introduction to Proofs</li>
+				<li>Real Analysis</li>
+			</ul>
+		<h4> Knowledge </h4>
 			<ul>
 				<li> </li>
+			</ul>
+	</section>
+	
+	<section>
+		<h2>Calculus</h2>
+		<h4>Courses Taken </h4>
 			<ul>
+				<li>Calculus I (Differential Calculus)</li>
+				<li>Calculus 2 (Integral Calculus, Sums, Sequences)</li>
+				<li>Calculus 3 (Vector and Multivariable Calculus) </li>
+			</ul>
+		<h4> Knowledge </h4>
+			<ul>
+				<li> </li>
+			</ul>
 	</section>
 </article>
 
