chipped away at some css, new logo

--- a/math/education.html
+++ b/math/education.html
@@ -63,7 +63,10 @@
 			<ul>
 				<li>Elementary Matrix Operations</li>
 				<li> Abstract Vector Spaces </li>
-				<li> Filler filler filler </li>
+				<li> Linear Transformations </li>
+				<li> Eigenvalues, Eigenvectors, and Diagonalization </li>
+				<li> Inner Product Spaces </li>
+				<li> Decompositions and Factorizations </li>
 			</ul>
 	</section>
 	
@@ -75,7 +78,13 @@
 			</ul>
 		<h4> Knowledge </h4>
 			<ul>
-				<li> </li>
+				<li> Separation of Variables </li>
+				<li> Slope Fields and Equilibria </li>
+				<li> Euler's Method and other Numerical Methods </li>
+				<li> First Order, Linear, and Nonlinear Systems </li>
+				<li> Forced, Unforced, Damped, and Resonant Harmonic Oscillation </li>
+				<li> Laplace Transforms </li>
+				<li> Partial Differential Equations and Method of Characteristics</li>
 			</ul>
 	</section>
 	
@@ -88,7 +97,13 @@
 			</ul>
 		<h4> Knowledge </h4>
 			<ul>
-				<li> </li>
+				<li> Sets and Set Theory</li>
+				<li> Modular Arithmetic, Equivalence Relations, Equivalence Classes</li>
+				<li> Countability </li>
+				<li> Sequences, Series </li>
+				<li> Elementary Topology </li>
+				<li> Proof Writing </li>
+				<li> Elementary Group Theory </li>
 			</ul>
 	</section>
 	
@@ -96,13 +111,19 @@
 		<h2>Calculus</h2>
 		<h4>Courses Taken </h4>
 			<ul>
-				<li>Calculus I (Differential Calculus)</li>
-				<li>Calculus 2 (Integral Calculus, Sums, Sequences)</li>
+				<li>Calculus I</li>
+				<li>Calculus 2</li>
 				<li>Calculus 3 (Vector and Multivariable Calculus) </li>
 			</ul>
 		<h4> Knowledge </h4>
 			<ul>
-				<li> </li>
+				<li> Limits, Derivatives, Integrals </li>
+				<li> Vector Calculus </li>
+				<li> Multivariable Calculus </li>
+				<li> Stokes' Theorem, Green's Theorem </li>
+				<li> Line integrals, Surface integrals </li>
+				<li> Polar and Spherical Coordinates </li>
+				<li> Some (very shallow) understanding of Calculus of Variations</li>
 			</ul>
 	</section>
 </article>
