--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/gallery.css" />
 	
 </head>
 <body>
@@ -53,7 +54,7 @@
 
 <article id="gallery">
 <section id="introduction">
-<h1> Artwork and Assets </h1>
+<h1 id="gametitle"> Artwork and Assets </h1>
 </section>
 <section>
 	<span> 3d Model Gallery</span>
