--- a/gamedesign/games.html
+++ b/gamedesign/games.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/gallery.css" />
+	<link rel="stylesheet" type="text/css" href="../css/project.css" />
 	
 </head>
 <body>
@@ -56,14 +58,15 @@
 </ul>
 </section>
 <aside> </aside>
+<h1 id="gametitle"> Games </h1>
 <section id="introduction"> 
-<h1> Games </h1>
+
 </section>
 <section id="apotheoun">
-	<span> Apotheoun</span>
+	<span class="galleryheader"> Apotheoun</span>
 </section>
 <section id="amusementpark">
-	<span> Amusement Park</span>
+	<span class="galleryheader"> Amusement Park</span>
 </section>
 </article>
 </body>
