--- a/math/research.html
+++ b/math/research.html
@@ -53,7 +53,10 @@
 <h1 id="mathtitle"> Research </h1>
 <section class="project">
 <h2> Lie Symmetries and Differential Equations </h2>
-<p> </p>
+<p> Research into the theoretical foundations of symmetry methods for differential equations, including Lie Symmetry Groups of ODEs, PDEs, and systems, infinitesimal generators and their prolongations, and discrete symmetries.
+Also investigated more advanced symmetry methods, such as variational symmetries, general (non-geometric) symmetries, and conservation laws. Currently investigating the application of these methods to various physical problems
+arising from the physical sciences.</p>
+<p> Research Mentor: Dr. Tamas Wiandt </p>
 <section>
 </article>
 </body>
