--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
 	<title> The Portfolio of Margaret Dorsey - Current Computing Projects</title>
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="../css/gallery.css" />
 	
 </head>
 <body>
@@ -53,7 +54,21 @@
 <h1> Design </h1>
  </section>
 <section>
-	<span> Architecture Sim User Interface</span>
+	<span class="projecttitle"> Architecture Sim User Interface</span>
+	<p class="description"> </p>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<p class="notes"> </p>
+	</div>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<p class="notes"> </p>
+	</div>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<p class="notes"> </p>
+	</div>
+	<a href="
 </section>
 
 </article>
