added content to some of the game pages, not styled yet

--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -56,15 +56,38 @@
 <section id="introduction">
 <h1 id="gametitle"> Artwork and Assets </h1>
 </section>
-<section>
-	<span> 3d Model Gallery</span>
+<section id="3d">
+	<span class="gallerytitle"> 3d Asset Gallery</span>
+	<p class="description"> </p>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<p class="notes"> </p>
+	</div>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<img src="" alt="" title="" />
+		<img src="" alt="" title="" />
+		<img src="" alt="" title="" />
+		<p class="notes"> </p>
+	</div>
+	<div class="imgbox">
+		<img src="" alt="" title="" />
+		<img src="../media/projects/architectsim/constructionmockup_fin.png" alt="Construction Screen Mockup" title="Construction Screen Mockup" />
+		<img src="../media/projects/architectsim/splashmockup_fin.png" alt="Splash Screen Mockup" title="Splash Screen Mockup" />
+		<img src="../media/projects/architectsim/simulationmockup_fin.png" alt="Simulation Mode Mockup" title="Simulation Mockup" />
+		<p class="notes">Mockups, made by me, except for the vector art used as a stand in for the gameplay view, which was made by my teammate Jeanette Forbes.</p>
+	</div>
+	<a class="gallerylink" href="../media/projects/architectsim/TeamRocket_DesignDoc.pdf">Design Doc</a>
 </section>
 
-<section>
-	<span> Brush and Ink Artwork</span>
+<section id="2d">
+	<span> 2d Asset Gallery </span>
+</section>
+<section id="traditionalart">
+	<span> Traditional Art </span>
 </section>
 
-<section>
+<section id="digitalart">
 	<span> Digital Art</span>
 </section>
 
