--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -53,22 +53,29 @@
 <section id="introduction">
 <h1 id="gametitle"> Design </h1>
  </section>
-<section>
-	<span class="projecttitle"> Architecture Sim User Interface</span>
+<section id="architectsim">
+	<span class="gallerytitle"> Architecture Sim User Interface</span>
 	<p class="description"> </p>
 	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<p class="notes"> </p>
+		<img src="../media/projects/architectsim/moodboard.png" alt="Mood Board" title="Mood Board" />
+		<p class="notes"> The mood board for the UI, made by me. the color scheme was eventually changed
+							to fit the preferences of the entire team. </p>
 	</div>
 	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<p class="notes"> </p>
+		<img src="../media/projects/architectsim/main_resizewireframe.jpg" alt="Title Screen Wireframe" title="Title Screen Wireframe" />
+		<img src="../media/projects/architectsim/construction_resizewireframe.jpg" alt="Construction Screen Wireframe" title="Construction Screen Wireframe" />
+		<img src="../media/projects/architectsim/module_resizewireframe.jpg" alt="Splash Screen Wireframe" title="Splash Screen Wireframe" />
+		<img src="../media/projects/architectsim/sim_resizewireframe.jpg" alt="Simulation Mode Wireframe" title="Simulation Mode Wireframe" />
+		<p class="notes"> Wireframes, made by me.. Some changes were made while the mockups were being made. </p>
 	</div>
 	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<p class="notes"> </p>
+		<img src="../media/projects/architectsim/titlescreenmockup_fin.png" alt="Title Screen Mockup" title="Title Screen Mockup" />
+		<img src="../media/projects/architectsim/constructionmockup_fin.png" alt="Construction Screen Mockup" title="Construction Screen Mockup" />
+		<img src="../media/projects/architectsim/splashmockup_fin.png" alt="Splash Screen Mockup" title="Splash Screen Mockup" />
+		<img src="../media/projects/architectsim/simulationmockup_fin.png" alt="Simulation Mode Mockup" title="Simulation Mockup" />
+		<p class="notes">Mockups, made by me, except for the vector art used as a stand in for the gameplay view, which was made by my teammate Jeanette Forbes.</p>
 	</div>
-	<a href="" > </a>
+	<a class="gallerylink" href="../media/projects/architectsim/TeamRocket_DesignDoc.pdf">Design Doc</a>
 
 </section>
 
