shoved some more content in, rudimentary gallery styling

--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -58,37 +58,46 @@
 </section>
 <section id="3d">
 	<span class="gallerytitle"> 3d Asset Gallery</span>
-	<p class="description"> </p>
+	<p class="description"> A collection of the 3d assets that I have made, for class projects and games.</p>
 	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<p class="notes"> </p>
+		<img src="../media/projects/art/keybladewireframe.png" alt="wireframe of keyblade model" title="Wireframe" />
+		<img src="../media/projects/art/keybladeshaded.png" alt="shaded keyblade model" title="Shaded" />
+		<img src="../media/projects/art/keybladetextured.png" alt="textured keyblade model" title="Textured" />
+		<p class="notes"> A 'gritty reboot' Kingdom Key ( <a href="http://www.khwiki.com/Kingdom_Key"> from Kingdom Hearts </a>) made from
+							reference for 3D Animation and Asset production. Modeled, unwrapped, textured, and rigged by me.</p>
 	</div>
-	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<img src="" alt="" title="" />
-		<img src="" alt="" title="" />
-		<img src="" alt="" title="" />
-		<p class="notes"> </p>
-	</div>
-	<div class="imgbox">
-		<img src="" alt="" title="" />
-		<img src="../media/projects/architectsim/constructionmockup_fin.png" alt="Construction Screen Mockup" title="Construction Screen Mockup" />
-		<img src="../media/projects/architectsim/splashmockup_fin.png" alt="Splash Screen Mockup" title="Splash Screen Mockup" />
-		<img src="../media/projects/architectsim/simulationmockup_fin.png" alt="Simulation Mode Mockup" title="Simulation Mockup" />
-		<p class="notes">Mockups, made by me, except for the vector art used as a stand in for the gameplay view, which was made by my teammate Jeanette Forbes.</p>
-	</div>
-	<a class="gallerylink" href="../media/projects/architectsim/TeamRocket_DesignDoc.pdf">Design Doc</a>
+	
 </section>
 
 <section id="2d">
-	<span> 2d Asset Gallery </span>
+	<span class="gallerytitle"> 2d Asset Gallery</span>
+	<p class="description"> A collection of the 2d assets that I have made, for class projects and games.</p>
+	<div class="imgbox">
+		<img src="../media/projects/art/spritesheetWhite.png" alt="spritesheet" title="Spritesheet" />
+		<p class="notes"> A spritesheet made for my 2D Animation and Asset Production class.</p>
+	</div>
+	
 </section>
+
 <section id="traditionalart">
-	<span> Traditional Art </span>
+	<span class="gallerytitle"> Traditional Art</span>
+	<p class="description"> Some of the stuff I've made with no computer involved, not necessarily for games.</p>
+	</div>
+	<div class="imgbox">
+		<img src="../media/projects/art/batman.jpg" alt="batman" title="Batman, ink and brush" />
+		<img src="../media/projects/art/snowWhite.jpg" alt="snow white" title="Snow White, ink and brush" />
+		<p class="notes"> Ink and brush sketches, to get a better idea of the watercolor style for a game.</p>
+	</div>	
 </section>
 
 <section id="digitalart">
-	<span> Digital Art</span>
+	<span class="gallerytitle"> Digital Art </span>
+	<p class="description"> Some of the stuff I've made just playing around in drawing software. </p>
+	<div class="imgbox">
+		<img src="../media/projects/art/angel.png" alt="abstract angel vector" title="Abstract Vector Art of an Angel, Inkscape" />
+		<img src="../media/projects/art/geisha.jpg" alt="geisha painting" title="Digital Painting of a Geisha, GIMP" />
+	</div>
+	
 </section>
 
 </article>
