--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -55,7 +55,10 @@
  </section>
 <section id="architectsim">
 	<span class="gallerytitle"> Architecture Sim User Interface</span>
-	<p class="description"> </p>
+	<p class="description"> The visual design process for a portion of the UI necessary for a hypothetical
+							game/application, for a group project assigned in an Interaction Design course. Our hypothetical application
+							was a building simulator, similar to a combination of Maya 3D and SimCity.
+							<a class="gallerylink" href="../media/projects/architectsim/TeamRocket_DesignDoc.pdf">Design Doc</a></p>
 	<div class="imgbox">
 		<img src="../media/projects/architectsim/moodboard.png" alt="Mood Board" title="Mood Board" />
 		<p class="notes"> The mood board for the UI, made by me. the color scheme was eventually changed
@@ -66,7 +69,7 @@
 		<img src="../media/projects/architectsim/construction_resizewireframe.jpg" alt="Construction Screen Wireframe" title="Construction Screen Wireframe" />
 		<img src="../media/projects/architectsim/module_resizewireframe.jpg" alt="Splash Screen Wireframe" title="Splash Screen Wireframe" />
 		<img src="../media/projects/architectsim/sim_resizewireframe.jpg" alt="Simulation Mode Wireframe" title="Simulation Mode Wireframe" />
-		<p class="notes"> Wireframes, made by me.. Some changes were made while the mockups were being made. </p>
+		<p class="notes"> Wireframes, made by me.. Some changes were made between these and the creation of the mockups. </p>
 	</div>
 	<div class="imgbox">
 		<img src="../media/projects/architectsim/titlescreenmockup_fin.png" alt="Title Screen Mockup" title="Title Screen Mockup" />
@@ -75,7 +78,7 @@
 		<img src="../media/projects/architectsim/simulationmockup_fin.png" alt="Simulation Mode Mockup" title="Simulation Mockup" />
 		<p class="notes">Mockups, made by me, except for the vector art used as a stand in for the gameplay view, which was made by my teammate Jeanette Forbes.</p>
 	</div>
-	<a class="gallerylink" href="../media/projects/architectsim/TeamRocket_DesignDoc.pdf">Design Doc</a>
+	
 
 </section>
 
