--- a/notes.html
+++ b/notes.html
@@ -53,6 +53,19 @@
 <p> All images were made by me, all CSS, scripts, etc are mine.
 Fonts are Across the Road, Caviar Dreams and Casual Nobility.
 <p>
+<h2> Above and Beyond </h2>
+<p> I went above and beyond by making my own vector graphics for my page styling, and making more than the minimum number of pages. </p>
+<h2> Challenges </h2>
+<p> I really just ran out of time for polish and plugging in more content on this project. A lot of the CSS was fiddly and took a lot more 
+time than I anticipated, and the way that the header works, I never quite figured out how to get the links in the blog sidebar to work the way
+I wanted them to. </p>
+<h2> What I could have done better </h2>
+<p> I could have included more than one piece of content for every page - I have more than one thing to put in to everything, and the pages are structured
+to be expandable, but it takes a long time to prepare things to be put into a site. I think I put enough in to show the general structure of the website, which is the 
+point of the project, but it would be a better portfolio site if it included more than just a small portion of my portfolio.</p>
+<p> I actually have an entire Japanese site that I just hid the links to, I would have liked to be able to finish that in time, but it wasn't to be. </p>
+<p> Also, I would have liked to spend more time tweaking some of the vector graphics, they aren't all quite perfect and they could be more cohesive. Some of my
+CSS is really unclean, and I plan to spend some time consolidating and tidying it up when I get the chance. It just is unlikely to happen before the end of this project. </p>
 </article>
 
 
