updated notes, readme

--- a/notes.html
+++ b/notes.html
@@ -51,14 +51,14 @@
 <article>
 <h1> Notes</h1>
 <p> All images were made by me, all CSS, scripts, etc are mine.
-Fonts are Across the Road, Caviar Dreams and Casual Nobility.
+Fonts are Across the Road, Caviar Dreams and Rounded Elegance.
 <p>
 <h2> Above and Beyond </h2>
 <p> I went above and beyond by making my own vector graphics for my page styling, and making more than the minimum number of pages. </p>
 <h2> Challenges </h2>
 <p> I really just ran out of time for polish and plugging in more content on this project. A lot of the CSS was fiddly and took a lot more 
 time than I anticipated, and the way that the header works, I never quite figured out how to get the links in the blog sidebar to work the way
-I wanted them to. </p>
+I wanted them to. I'll probably revamp the entire blog structure for project 3 when we have some Javascript to play with. </p>
 <h2> What I could have done better </h2>
 <p> I could have included more than one piece of content for every page - I have more than one thing to put in to everything, and the pages are structured
 to be expandable, but it takes a long time to prepare things to be put into a site. I think I put enough in to show the general structure of the website, which is the 
