fixed validation errors

--- a/math/research.html
+++ b/math/research.html
@@ -57,7 +57,7 @@
 Also investigated more advanced symmetry methods, such as variational symmetries, general (non-geometric) symmetries, and conservation laws. Currently investigating the application of these methods to various physical problems
 arising from the physical sciences.</p>
 <p> Research Mentor: Dr. Tamas Wiandt </p>
-<section>
+</section>
 </article>
 </body>
 </html>
