fixing up some things before starting the second part of the project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	
 </div>
 
-<footer>
+<main>
 <h1> Welcome to my portfolio website!</h1>
 <p> My name is Margaret Dorsey, and I'm a second year dual major Game Design and Development and Computational Math student at the Rochester Institute of Technology.
 I am also following the Computer Science curriculum above and beyond my minor requirements, and completing a second minor in the Japanese language. Please feel free to look around
@@ -62,7 +62,7 @@ and get to know me.
 </p>
 
 <a href="notes.html"> Link to the notes page </a>
-</footer>
+</main>
 </body>
 </html>
 
